--- a/package.json
+++ b/package.json
@@ -1,30 +1,20 @@
 {
-  "name": "applied-project",
-  "version": "0.0.0",
-  "private": true,
+  "name": "project-ci-cd-severless",
+  "version": "1.0.0",
+  "description": "",
+  "main": "handler.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test:unit": "vitest",
-    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "start:dev": "sls offline start",
+    "test": "jest ./tests/**/*.spec.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "pinia": "^2.0.32",
-    "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "serverless-dotenv-plugin": "^3.9.0",
+    "serverless-offline": "^8.0.0"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "@vue/eslint-config-prettier": "^7.1.0",
-    "@vue/test-utils": "^2.3.0",
-    "eslint": "^8.34.0",
-    "eslint-plugin-vue": "^9.9.0",
-    "jsdom": "^21.1.0",
-    "prettier": "^2.8.4",
-    "vite": "^4.1.4",
-    "vitest": "^0.29.1"
+    "jest": "^27.0.6"
   }
 }
