adjustment ci /cd yml
Signed-off-by: ryandls <bryandouglasxd@gmail.com>

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -28,7 +28,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Install dependencies
-        run: yarn install --frozen-lockfile --prefer-offline
+        run: yarn install 
 
       - name: ESLint
         run: yarn run lint
