--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -31,7 +31,7 @@ jobs:
         run: yarn install 
 
       - name: ESLint
-        run: yarn run lint
+        run: yarn run eslint
 
       - name: Run all tests
         run: yarn test
