--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -3,13 +3,12 @@ name: Deploy Dev to AWS
 on:
   push:
     branches:
-      - dev
+      - main
 
 jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    environment: dev
 
     steps:
       - name: Checkout
@@ -31,7 +30,7 @@ jobs:
         run: yarn install 
 
       - name: ESLint
-        run: yarn run eslint
+        run: yarn run lint
 
       - name: Run all tests
         run: yarn test
