--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "handler.js",
   "scripts": {
     "start:dev": "sls offline start",
-    "test": "jest ./tests/**/*.spec.js"
+    "test": "jest ./tests/**/*.spec.js",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "ryandls <bryandouglasxd@gmail.com>",
