adjustment deploy script in packjson
Signed-off-by: ryandls <bryandouglasxd@gmail.com>

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "handler.js",
   "scripts": {
     "start:dev": "sls offline start",
+    "deploy": "serverless deploy",
     "test": "jest ./tests/**/*.spec.js",
     "lint": "eslint ."
   },
