--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "serverless-offline": "^8.0.0"
   },
   "devDependencies": {
-    "jest": "^27.0.6"
+    "jest": "^27.0.6",
+    "serverless": "^3.30.1"
   },
   "repository": "git@github.com:Ryandls/applied-project.git"
 }
